--- a/tnuniv/angular.json
+++ b/tnuniv/angular.json
@@ -35,7 +35,7 @@
                                 "./src", "./src/sass"
                             ]
                         },
-                        "scripts": [],
+                        "scripts": ["node_modules/jquery/dist/jquery.js"],
                         "es5BrowserSupport": true
                     },
                     "configurations": {
