--- a/tnuniv/package.json
+++ b/tnuniv/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "~7.2.0",
     "autosize": "^4.0.2",
     "bootstrap": "^4.2.1",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
