--- a/tnuniv/package.json
+++ b/tnuniv/package.json
@@ -17,6 +17,7 @@
         "@angular/common": "~7.2.0",
         "@angular/compiler": "~7.2.0",
         "@angular/core": "~7.2.0",
+        "@angular/fire": "^5.1.1",
         "@angular/forms": "~7.2.0",
         "@angular/material": "^7.3.1",
         "@angular/platform-browser": "~7.2.0",
@@ -26,6 +27,7 @@
         "bootstrap": "^4.2.1",
         "classlist.js": "^1.1.20150312",
         "core-js": "^2.5.4",
+        "firebase": "^5.8.4",
         "hammerjs": "^2.0.8",
         "jquery": "^3.3.1",
         "rxjs": "~6.3.3",
