--- a/tnuniv/package.json
+++ b/tnuniv/package.json
@@ -24,7 +24,7 @@
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
         "autosize": "^4.0.2",
-        "bootstrap": "^4.2.1",
+        "bootstrap": "^4.3.1",
         "classlist.js": "^1.1.20150312",
         "core-js": "^2.5.4",
         "firebase": "^5.8.4",
@@ -38,7 +38,7 @@
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.13.0",
         "@angular/cli": "^7.3.3",
-        "@angular/compiler-cli": "~7.2.0",
+        "@angular/compiler-cli": "^7.2.7",
         "@angular/language-service": "~7.2.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
